# pdf

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  commitlint.config.js  lint-staged.config.js  package.json  rustfmt.toml
.cargo/: config.toml
src/: cli.rs  error.rs  main.rs  model.rs  output.rs  pdf_ops.rs  runner.rs  scanner.rs  tool_registry.rs
tests/: cli_contract.rs
