[package]
name = "pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
lopdf = "0.38.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
walkdir = "2.5.0"
which = "8.0.0"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
